--- a/Scripts/Scripts.csproj
+++ b/Scripts/Scripts.csproj
@@ -186,7 +186,7 @@
     <Compile Include="Gumps\ClientGump.cs" />
     <Compile Include="Gumps\ConfirmBreakCrystalGump.cs" />
     <Compile Include="Gumps\ConfirmHeritageGump.cs" />
-    <Compile Include="Gumps\ConfirmHouseResize.cs" />
+    <Compile Include="Multis\Houses\Gumps\ConfirmHouseResize.cs" />
     <Compile Include="Gumps\ConfirmReleaseGump.cs" />
     <Compile Include="Gumps\DawnsMusicBoxGump.cs" />
     <Compile Include="Gumps\FacetGump.cs" />
@@ -233,10 +233,10 @@
     <Compile Include="Gumps\Guilds\RecruitTarget.cs" />
     <Compile Include="Gumps\HeritageTokenGump.cs" />
     <Compile Include="Gumps\HonorSelf.cs" />
-    <Compile Include="Gumps\HouseDemolishGump.cs" />
-    <Compile Include="Gumps\HouseGump.cs" />
-    <Compile Include="Gumps\HouseGumpAOS.cs" />
-    <Compile Include="Gumps\HouseTransferGump.cs" />
+    <Compile Include="Multis\Houses\Gumps\HouseDemolishGump.cs" />
+    <Compile Include="Multis\Houses\Gumps\HouseGump.cs" />
+    <Compile Include="Multis\Houses\Gumps\HouseGumpAOS.cs" />
+    <Compile Include="Multis\Houses\Gumps\HouseTransferGump.cs" />
     <Compile Include="Gumps\NoticeGump.cs" />
     <Compile Include="Gumps\PetResurrectGump.cs" />
     <Compile Include="Gumps\PlayerVendorGumps.cs" />
@@ -256,7 +256,7 @@
     <Compile Include="Gumps\ReportMurderer.cs" />
     <Compile Include="Gumps\ResurrectGump.cs" />
     <Compile Include="Gumps\RunebookGump.cs" />
-    <Compile Include="Gumps\SetSecureLevelGump.cs" />
+    <Compile Include="Multis\Houses\Gumps\SetSecureLevelGump.cs" />
     <Compile Include="Gumps\SkillsGump.cs" />
     <Compile Include="Gumps\TithingGump.cs" />
     <Compile Include="Gumps\ToTAdminGump.cs" />
@@ -2318,7 +2318,7 @@
     <Compile Include="Mobiles\Monsters\Humanoid\GrayGoblin.cs" />
     <Compile Include="Mobiles\Monsters\Humanoid\GrayGoblinKeeper.cs" />
     <Compile Include="Mobiles\Monsters\Humanoid\GrayGoblinMage.cs" />
-    <Compile Include="Multis\BaseHouse.cs" />
+    <Compile Include="Multis\Houses\BaseHouse.cs" />
     <Compile Include="Multis\Boats\BaseBoat.cs" />
     <Compile Include="Multis\Boats\BaseBoatDeed.cs" />
     <Compile Include="Multis\Boats\BaseDockedBoat.cs" />
@@ -2344,18 +2344,18 @@
     <Compile Include="Multis\Camps\MageCamp.cs" />
     <Compile Include="Multis\Camps\OrcCamp.cs" />
     <Compile Include="Multis\Camps\RatCamp.cs" />
-    <Compile Include="Multis\ComponentVerification.cs" />
-    <Compile Include="Multis\Deeds.cs" />
-    <Compile Include="Multis\DynamicDecay.cs" />
-    <Compile Include="Multis\HouseFoundation.cs" />
-    <Compile Include="Multis\HousePlacement.cs" />
-    <Compile Include="Multis\HousePlacementTool.cs" />
-    <Compile Include="Multis\Houses.cs" />
-    <Compile Include="Multis\HouseSign.cs" />
-    <Compile Include="Multis\HouseTeleporter.cs" />
-    <Compile Include="Multis\MovingCrate.cs" />
-    <Compile Include="Multis\NoHousingItem.cs" />
-    <Compile Include="Multis\PreviewHouse.cs" />
+    <Compile Include="Multis\Houses\ComponentVerification.cs" />
+    <Compile Include="Multis\Houses\Deeds.cs" />
+    <Compile Include="Multis\Houses\DynamicDecay.cs" />
+    <Compile Include="Multis\Houses\HouseFoundation.cs" />
+    <Compile Include="Multis\Houses\HousePlacement.cs" />
+    <Compile Include="Multis\Houses\HousePlacementTool.cs" />
+    <Compile Include="Multis\Houses\Houses.cs" />
+    <Compile Include="Multis\Houses\HouseSign.cs" />
+    <Compile Include="Multis\Houses\HouseTeleporter.cs" />
+    <Compile Include="Multis\Houses\MovingCrate.cs" />
+    <Compile Include="Multis\Houses\NoHousingItem.cs" />
+    <Compile Include="Multis\Houses\PreviewHouse.cs" />
     <Compile Include="Quests\- Misc\FoolishGold.cs" />
     <Compile Include="Quests\- Misc\SAQuestItems.cs" />
     <Compile Include="Quests\Ambitious Solen Queen\AmbitiousQueenQuest.cs" />
